--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "bot.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "snipe": "node bot.js"
@@ -12,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.1",
+    "commander": "^8.3.0",
     "dotenv": "^10.0.0",
     "ethers": "^5.1.4",
     "express": "^4.17.1",
-    "inquirer": "^8.1.0"
+    "inquirer": "^8.1.0",
+    "minimalist": "^1.0.0",
+    "minimist": "^1.2.5"
   }
 }
